--- a/package.json
+++ b/package.json
@@ -2,7 +2,8 @@
     "name": "js-neutron-frame",
     "version": "1.3.0",
     "description": "Node project to have data manipulation and analysis, parallel to pandas",
-    "main": "src/index.js",
+    "main": "dist/index.js",
+    "types": "dist/index.d.ts",
     "scripts": {
         "test": "echo \"Error: no test specified\" && exit 1"
     },
